# Bet365-parser

./: .env  .gitignore  .gitlab-ci.yml  LICENCE  Makefile  README.md  docker-compose.yml  foobar.py  pyproject.toml
app/: cmd.py  settings.py  utils.py
app/dto/: annotations.py  constants.py  enums.py  exceptions.py  regex.py  sub_market.py
app/dto/entities/: base.py  bets.py  event.py  feed.py  sport.py  update.py  websocket.py
app/lib/: provider.py  wireshark.py
app/repository/: bet_cache.py  events.py  parser.py  parser_v1.py  provider.py  updates.py  websocket_data_parser.py
app/repository/abc/: fetcher.py
app/repository/bet365/: __init__.py  fetcher.py  parser.py
app/repository/db/: base.py  db.py  in_memory.py  json.py  json_db.py
app/repository/db/models/: __init__.py  base.py  bk_event.py  global_event.py
app/repository/interceptor/: __init__.py  interceptor.py  websocket_data_parser.py
app/services/: _base_live_service.py  bet365.py  liveness_probe.py  service.py
deploy/: Dockerfile.linux  Dockerfile.win
scripts/: entrypoint.sh
workspace/: README.md  bet365_parser.py  driver.py  octet.js  soccerapi_test.py  socket_v1.py  socket_v2.py  www.bet365.com_ws.har
workspace/js/: clues.js  index.js  index_1.js  index_2.js  index_3.js
