[tool.poetry]
name = "bet365-parser"
version = "0.0.1"
description = "Bet365 Asynchronous distributed python parser"
authors = ["Anthony Bagrianov <rudiemeant@gmail.com>"]
maintainers = ["Anthony Bagrianov <rudiemeant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.0"
pydantic-settings = "2.0.3"
pyshark = "0.6"
uvloop = {version = "0.19.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
pydantic = "2.4.2"
loguru = "0.7.2"
attrs = "23.1.0"

[tool.poetry.group.db-json.dependencies]
aiofiles = "23.2.1"

[tool.poetry.group.dev.dependencies]
black = "23.11.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.7.0"
bandit = {extras = ["toml"], version = "1.7.5"}
types-aiofiles = "23.2.0.0"

[tool.black]
line-length = 100

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 3
select = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 100
wrap_length = 100
multi_line_output = 3
combine_as_imports = true
force_alphabetical_sort_within_sections = true
overwrite_in_place = true
skip_glob = []

[tool.mypy]
plugins = []
python_version = "3.11"
follow_imports = "silent"
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
namespace_packages = true
exclude = []

[[tool.mypy.overrides]]
module = [
    "pyshark.*",
]
ignore_missing_imports = true

[tool.bandit]
skips = [
    "B311" # Standard pseudo-random generators are not suitable for security/cryptographic purposes
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
python_files = ["test_*.py", "tests/units/*.py"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    # Skip any pass lines such as may be used for @abstractmethod.
    "pass",

    # Don't complain if tests don't hit defensive assertion code.
    "raise NotImplementedError",
]